2016.1.5
* added option to change the K factor for specific figures according rules
* added 2016 French rules
* added warning when parsing "more=" rule to non-existent rule
* added checking for maximum K according rules in figure chooser
* moved rolling turns in rules to generic (e.g. CIVA Advanced Unknownall) as max K checking is handled in figure chooser

2016.1.4
* fixed breaking of sequence scrolling on touch devices in 2016.1.3

2016.1.3
* corrected inability to change vertical line length of P-loops with half roll in top
* removed viewport setting as it causes zooming issues when selecting text field
* corrected demo menu to fold in on iOS when tapped
* fixed issues with the Y-axis flip in 2016 Unlimited Free Known figures
* added explaining text when OpenAero is first installed, including language chooser
* replaced innerText by textContent according W3C specifications
* added option to lock the sequence
* added retaining of the queue through sessions
* fixed bug causing figures to "jump" when selected
* added more robust checking of legal figure letters
* fixed mobile layout issues (Issue #201)
* restored figure selection by moving through sequence string
* improved figure dragging to edges of sequence
* added default_view in all saves (also Form A, B, C)
* fixed grabbing and moving of figures on browsers that have both touch and mouse support (Chrome 48)
* removed "New" text from print dialog for Forms R & L
* don't give a warning when using Firefox or Safari anymore

2016.1.2
* fixed bug in figure scaling when using Reference sequence and Form A
* fixed bug causing negative zoom (e.g. -1%) to create extra figure and not change zoom

2016.1.1
* corrected prevention of pop-up blocker for Check Multiple Sequences
* fixed figure exit direction being different in Grid view when starting on Y axis on Form B
* changed handling of Floating Point to only deduct from figures without letter according 2016 CIVA rules