@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# OpenAero version 2016.1.5i
+# OpenAero version 2016.1.5
 addtohomescreen/addtohomescreen.css
 addtohomescreen/addtohomescreen.min.js
 arestisystem.html
