@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-  index.html version 2016.1.3
+  index.html version 2016.1.5
   This file is part of OpenAero.
 
   OpenAero was originally designed by Ringo Massa and built upon ideas
@@ -30,6 +30,7 @@
     <!-- <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" /> -->
     <!-- set web app capable for Chrome homescreen links -->
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="OpenAero">
     <!-- do the same for iOS, and set title and status bar -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="OpenAero" />
